// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane R1 — the phone is unchanged (golden) contacts add sheet (header Plus), iOS 390 1`] = `
{
  "lines": 506,
  "sha256": "c60ebde660cc4d2c594aaaafccff221af1638a2851560b1c0c2d0d5365c48c1d",
}
`;

exports[`lane R1 — the phone is unchanged (golden) contacts at rest, iOS 390 1`] = `
{
  "lines": 506,
  "sha256": "ebd6489c4ca3dde657c9483e3460d9be1d24bcdb11b3781a2154730afe1eb0ca",
}
`;

exports[`lane R1 — the phone is unchanged (golden) contacts at rest, web 390 1`] = `
{
  "lines": 506,
  "sha256": "ebd6489c4ca3dde657c9483e3460d9be1d24bcdb11b3781a2154730afe1eb0ca",
}
`;

exports[`lane R1 — the phone is unchanged (golden) contacts at rest, web 768 1`] = `
{
  "lines": 506,
  "sha256": "ebd6489c4ca3dde657c9483e3460d9be1d24bcdb11b3781a2154730afe1eb0ca",
}
`;

exports[`lane R1 — the phone is unchanged (golden) contacts detail open, iOS 390 1`] = `
{
  "lines": 601,
  "sha256": "3ea4f4b7fd08b4e6297b7360f802d9dc961f1ee935e213333d94f5f1d63b289f",
}
`;

exports[`lane R1 — the phone is unchanged (golden) crew add sheet (add-crew-member), iOS 390 1`] = `
{
  "lines": 427,
  "sha256": "ef8a24cfd7b0516f9ce3e41b795a11766fb426c03d78ae52b8df18e66aad9cdd",
}
`;

exports[`lane R1 — the phone is unchanged (golden) crew at rest, iOS 390 1`] = `
{
  "lines": 427,
  "sha256": "01ff086367913b2009e412cf78db76f4be0c5bb5224b31ac1cd355a3bc6d0a9c",
}
`;

exports[`lane R1 — the phone is unchanged (golden) crew at rest, web 390 1`] = `
{
  "lines": 427,
  "sha256": "01ff086367913b2009e412cf78db76f4be0c5bb5224b31ac1cd355a3bc6d0a9c",
}
`;

exports[`lane R1 — the phone is unchanged (golden) crew at rest, web 768 1`] = `
{
  "lines": 427,
  "sha256": "01ff086367913b2009e412cf78db76f4be0c5bb5224b31ac1cd355a3bc6d0a9c",
}
`;

exports[`lane R1 — the phone is unchanged (golden) crew detail open, iOS 390 1`] = `
{
  "lines": 526,
  "sha256": "27d51ad9e7f30bd9d6aacdd184bdb5fe48a9eef2680bcf4a87ca5546203c2316",
}
`;
